<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/mynote_background_v3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addreport">

    <FrameLayout
        android:id="@+id/farmeAM"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginTop="25dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn" />

        <TextView
            android:id="@+id/deceline"
            android:text="@string/back1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/back_btn_pressed"/>
        <TextView
            android:id="@+id/update"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="end|center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/but_true_pressed"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/Scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="parent">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_filler"
                android:layout_gravity="center"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp">

                <EditText
                    android:id="@+id/editextmain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="100"
                    android:minHeight="48dp"
                    android:textSelectHandle="@color/orange"
                    android:textColor="@color/black"
                    android:textColorHint="@color/blue_hint"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/deceline" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_filler"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/editextdesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:textSelectHandle="@color/orange"
                    android:textColor="@color/black"
                    android:textColorLink="@color/orange"
                    android:textColorHint="@color/blue_hint"
                    android:hint="@string/descripting"
                    android:importantForAutofill="no"
                    android:gravity="start|center"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    app:layout_constraintTop_toBottomOf="@+id/editextmain" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>